# ImGui-DirectX-12-Kiero-Hook

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.Json  ImGui-DirectX-12-Kiero-Hook.sln  LICENSE  README.md  start_example.bat
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  cmake-single-platform.yml  cmake.yml  msbuild.yml  stale.yml
ImGui-DirectX-12-Kiero-Hook/: ImGui-DirectX-12-Kiero-Hook.filters  ImGui-DirectX-12-Kiero-Hook.vcxproj
ImGui-DirectX-12-Kiero-Hook/src/: d3d12hook.cpp  d3d12hook.h  dllmain.cpp  globals.h  includes.h  main.cpp
ImGui-DirectX-12-Kiero-Hook/src/logger/: logger.h
app/: CMakeLists.txt
app/src/: DXSample.cpp  DXSample.hpp  DXSampleHelper.hpp  Win32Application.cpp  Win32Application.hpp  d3d12window.cpp  d3d12window.hpp  main.cpp  stdafx.h
cmake/: common.cmake  dependencies.cmake
dll/: CMakeLists.txt
dll/src/: dllmain.cpp  includes.h
dll/src/cheats/: NameCollisions.inl  OLD_DLL_MAIN.cpp  SDK.hpp  UnrealContainers.hpp
dll/src/cheats/Aimbot/: AimbotConfig.cpp  AimbotConfig.h  AimbotController.cpp  AimbotController.h  MathUtils.cpp  MathUtils.h  TargetSelector.cpp  TargetSelector.h
dll/src/cheats/Analysis/: BoneAnalyzer.cpp  BoneAnalyzer.h
dll/src/cheats/Core/: CheatMain.cpp  CheatMain.h  Config.cpp  Config.h
dll/src/cheats/Features/: GodMode.cpp  GodMode.h  ResourceService.cpp  ResourceService.h  SaveService.cpp  SaveService.h  UnlockService.cpp  UnlockService.h  WeaponManager.cpp  WeaponManager.h  WeaponService.cpp  WeaponService.h
dll/src/cheats/SDK/: ABP_AtlanteanCube_classes.hpp  ABP_AtlanteanCube_functions.cpp  ABP_AtlanteanCube_parameters.hpp  ABP_AtlanteanCube_structs.hpp  ABP_BasePlayer_Arms_classes.hpp  ABP_BasePlayer_Arms_functions.cpp  ABP_BasePlayer_Arms_parameters.hpp  ABP_BasePlayer_Arms_structs.hpp  ABP_BasePlayer_classes.hpp  ABP_BasePlayer_functions.cpp  ABP_BasePlayer_parameters.hpp  ABP_BasePlayer_structs.hpp  ABP_BrinePistol_classes.hpp  ABP_BrinePistol_functions.cpp  ABP_BrinePistol_parameters.hpp  ABP_BrinePistol_structs.hpp  ABP_CameraRig_classes.hpp  ABP_CameraRig_functions.cpp  ABP_CameraRig_parameters.hpp  ABP_CameraRig_structs.hpp  ABP_CopyPose_classes.hpp  ABP_CopyPose_functions.cpp  ABP_CopyPose_parameters.hpp  ABP_CopyPose_structs.hpp  ABP_CoralShaman_classes.hpp  ABP_CoralShaman_functions.cpp  ABP_CoralShaman_parameters.hpp  ABP_CoralShaman_structs.hpp  ABP_Enginerifle_classes.hpp  ABP_Enginerifle_functions.cpp  ABP_Enginerifle_parameters.hpp  ABP_Enginerifle_structs.hpp  ABP_FishDiety_classes.hpp  ABP_FishDiety_functions.cpp  ABP_FishDiety_parameters.hpp  ABP_FishDiety_structs.hpp  ABP_Generic_Chest_classes.hpp  ABP_Generic_Chest_functions.cpp  ABP_Generic_Chest_parameters.hpp  ABP_Generic_Chest_structs.hpp  (+2880 more)
dll/src/cheats/Services/: AimbotService.cpp  AimbotService.h  BoneService.cpp  BoneService.h  GameServices.cpp  GameServices.h  PlayerEffectsService.cpp  PlayerEffectsService.h  ResourceService.cpp  ResourceService.h  SaveService.cpp  SaveService.h  TargetingService.cpp  TargetingService.h  UnlockService.cpp  UnlockService.h  WeaponService.cpp  WeaponService.h
dll/src/cheats/Utils/: Console.cpp  Console.h  Input.cpp  Input.h
dll/src/dev/: Console.cpp  Console.h  logger.h  validity.h
dll/src/dev/imgui/: Imgui_notify.h  imgui_helper.cpp  imgui_helper.h
dll/src/dev/imgui/fonts/: font.h
dll/src/framework/: stdafx.h
dll/src/gui/: CheatMenu.cpp  CheatMenu.h  modmenu.cpp  modmenu.h
dll/src/gui/Tabs/: AimbotTab.cpp  AimbotTab.h  DebugTab.cpp  DebugTab.h  GameplayTab.cpp  GameplayTab.h  MiscTab.cpp  MiscTab.h  OptionsTab.cpp  OptionsTab.h  UnlocksTab.cpp  UnlocksTab.h  WeaponsTab.cpp  WeaponsTab.h
dll/src/gui/core/: themes.h
dll/src/hooks/: d3d11hook.cpp  d3d11hook.h  d3d12hook.cpp  hook_config.h
src/: dllmain.cpp  includes.h
src/dev/: Console.h  logger.h
src/hooks/: d3d12hook.cpp  d3d12hook.h
